# Operating-document

./: .gitignore  .gitmodules  .pdm-python  404.html  CHANGELOG.md  CNAME  CONTRIBUTING.md  DevEnv-Launcher.bat  LICENSE.md  README.md  _sidebar.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  table of contents.md  table_of_contents.md  zensical.toml
.github/workflows/: ci.yml  release.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/CODE_OF_CONDUCT/: index.html
0.1/CTD/: index.html
0.1/General/: OPDOC-General-202501-R3-SC.docx  index.html
0.1/LICENSE/: index.html
0.1/Programming/: index.html
0.1/search/: search_index.json
CODE_OF_CONDUCT/: index.html
CTD/: Controller_assessment_outline.md  OPDOC-CTD-202501-R3-SC.docx  OPDOC-CTD-202501-R3-SC.md  index.html  index.md
CTD/Learning_Center/: index.html  index.md
CTD/OPDOC-CTD-202501-R3-SC/: index.html
CTD/OPDOC-CTD-202501-R4-SC/: index.html
CTD/Work_report/: index.html
Contents/: index.html
Contribution_guidelines/: index.html
Document/: README.md
General/: COC.md  Code_of_Conduct.md  OPDOC-General-202501-R3-SC.md  OPDOC-General-202502-R2-SC.docx  OPDOC-General-202502-R2-SC.md  Standar_ file_format.docx  Standar_ file_format.md  Standar_file_format.md  index.html  index.md
General/OPDOC-General-202501-R3-SC/: index.html
LICENSE/: index.html
Programming/: index.html
docs/: Contents.md  Contribution_guidelines.md  LICENSE.md  index.md
search/: search_index.json
site/: 404.html  index.html  search.json  sitemap.xml
(+95 files in other folders)
