[project]
authors = [
  {name = "Master_Gui", email = "1436001938@qq.com"},
  {name = "Half_nothing", email = "Half_nothing@163.com"},
  {name = "DamnQuan", email = "255674717@qq.com"},
]
dependencies = [
  "mkdocs-material>=9.6.22",
  "mkdocs-get-deps>=0.2.0",
  "mkdocs-git-authors-plugin>=0.10.0",
  "mkdocs-git-committers-plugin-2>=2.5.0",
  "mkdocs-git-revision-date-localized-plugin>=1.4.7",
  "mkdocs-material>=9.6.22",
  "mkdocs-material-extensions>=1.3.1",
  "pygments>=2.19.2",
]
description = "Operating Document"
license = {text = "CC BY-NC-SA 4.0"}
name = "Operating-document"
readme = "README.md"
requires-python = "==3.12.*"
version = "0.1.0"

[tool.pdm]
distribution = false
